--- a/visionSamples/barcode-reader/app/build.gradle
+++ b/visionSamples/barcode-reader/app/build.gradle
@@ -1,4 +1,17 @@
+buildscript {
+    repositories {
+        jcenter() // or mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.0'
+    }
+}
 apply plugin: 'com.android.application'
+
+repositories {
+    mavenCentral()
+}
 
 android {
     compileSdkVersion 23
@@ -21,8 +34,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:23.0.1'
     // Important - the CameraSource implementation in this project requires version 8.1 or higher.
-    compile 'com.google.android.gms:play-services:8.1.0'
-    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.google.android.gms:play-services-identity:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.pubnub:pubnub-android:3.7.10'
 }
