--- a/visionSamples/barcode-reader/app/build.gradle
+++ b/visionSamples/barcode-reader/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-identity:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.pubnub:pubnub-android:3.7.10'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
 }
