--- a/visionSamples/barcode-reader/app/src/main/AndroidManifest.xml
+++ b/visionSamples/barcode-reader/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
 
         <activity android:name=".BarcodeCaptureActivity"
             android:label="Read Barcode"/>
+        <activity android:name=".LoginActivity"
+            android:label="Login"/>
     </application>
 
 </manifest>
